# gobble

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.toml  go.mod  go.sum  gobble.example.yaml  main.py  pyproject.toml  yacht_template.yaml
.github/workflows/: on_new_tag.yml  publish-docker-image.yml  quality.yml  release-please.yml  versioning.yml
cmd/gobble/: main.go
gobble/: __init__.py  app.py  config.py  exceptions.py  logging_config.py  protocols.py  utils.py
gobble/discord/: client.py  config.py  exceptions.py  models.py
gobble/homeassistant/: client.py
gobble/plex/: config.py  server.py
gobble/plex/api/: client.py  schemas.py
gobble/plexapi/: client.py  config.py  schemas.py
gobble/routes/v1/plex/: models.py  router.py  utils.py
gobble/routes/v1/tasks/: models.py  router.py
gobble/tasks/: __init__.py
gobble/tasks/webhooks/: event_types.py  loggers.py  registry.py  tasks.py
gobble/webhooks/: event_types.py  exceptions.py  webhook.py
gobble/webhooks/tasks/: discord.py  exceptions.py  homeassistant.py  logger.py  models.py  registry.py
pkg/: util.go
pkg/apps/: app.go
pkg/apps/jellyfin/: jellyfin.go  types.go  util.go
pkg/apps/plex/: plex.go  types.go  util.go
pkg/common/: types.go
pkg/configuration/: apps.go  config.go  flags.go  setup.go
pkg/services/: service.go
pkg/services/jellyfin/: jellyfin.go  types.go  util.go
pkg/tasks/: users.go
pkg/users/: config.go  match.go  match_test.go  types.go  types_test.go  user.go
pkg/util/: responses.go
pkg/watcher/: handlers.go  server.go  users.go  watcher.go
tests/unit/: conftest.py
tests/unit/homeassistant/: test_client.py
tests/unit/routes/v1/plex/: test_router.py  webhook_data.json
tests/unit/webhooks/: conftest.py
tests/unit/webhooks/tasks/: test_registry.py
