[tool.poetry]
name = "gobble"
version = "0.2.1"
description = ""
authors = ["Marcel Blijleven <marcelblijleven@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websocket = "^0.2.1"
pydantic = "^2.7.1"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
commitizen = "^3.26.0"
pytest-asyncio = "^0.23.7"
pytest-env = "^1.1.3"

[tool.commitizen]
version_provider = "poetry"
version_files = ["gobble/__init__.py"]
update_changelog_on_bump = true

[tool.pytest_env]
PLEX__SERVER_URL = "http://localhost:34000"
PLEX__TOKEN = "t0pS3cret"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

