[tool.poetry]
name = "gobble"
version = "0.6.2"
description = ""
authors = ["Marcel Blijleven <marcelblijleven@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websocket = "^0.2.1"
pydantic = "^2.7.1"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
coverage = "^7.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
commitizen = "^3.26.0"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.0"
ruff = "^0.4.5"
respx = "^0.21.1"

[tool.commitizen]
version_provider = "poetry"
version_files = ["gobble/__init__.py"]
update_changelog_on_bump = true

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.ruff.lint]
extend-select = [
    "I"  # Sort imports
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

